[curl] Obtain the Content-Length and request header size ourselves. https://bugs.webkit.org/show_bug.cgi?id=272445

Reviewed by Fujii Hironori.

Since curl 8.7.0, CURLINFO_CONTENT_LENGTH_DOWNLOAD_T and
CURLINFO_REQUEST_SIZE  are no longer available in the header callback.
For this reason, we will obtain the Content-Length and request header
size ourselves.

* LayoutTests/platform/wincairo/TestExpectations:
* Source/WebCore/platform/network/curl/CurlContext.cpp:
(WebCore::CurlHandle::addExtraNetworkLoadMetrics):
* Source/WebCore/platform/network/curl/CurlContext.h:
* Source/WebCore/platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::setupTransfer):
(WebCore::CurlRequest::didReceiveHeader):
(WebCore::CurlRequest::didReceiveDebugInfo):
(WebCore::CurlRequest::networkLoadMetrics):
(WebCore::CurlRequest::getContentLength):
* Source/WebCore/platform/network/curl/CurlRequest.h:

Canonical link: https://commits.webkit.org/279553@main